--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,10 @@ footer {
   div {
     position: relative;
   }
+  .center {
+  margin: 15px 200px;
+padding: 5px;
+}
   #image{
     padding: auto;
     width: 25%;
